--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
+    <h1>Rock Paper Scissors</h1>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <div class="results"></div>
     <script src="script.js"></script>
   </body>
 </html>
