made the javascript work and change the ui a bit

--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Bungee+Inline"
+      href="https://fonts.googleapis.com/css?family=Bungee+Inline|Lilita+One"
       rel="stylesheet"
     />
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
-    <header><h1>Rock Paper Scissors</h1></header>
+    <header class="header"><h1>Rock Paper Scissors</h1></header>
 
     <div class="container">
       <div class="results">
-        <p id="first-text">Choose your Weapon</p>
+        <p id="first-text">Press a button to choose</p>
         <p id="second-text">First to 5 points wins the game</p>
       </div>
       <div class="score">
         <div class="show-score">
           <p class="sings" id="player-selection">?</p>
-          <p id="player-score">Player:0</p>
+          <p id="player-score">Player: 0</p>
         </div>
         <div class="show-score">
           <p class="sings" id="computer-selection">?</p>
-          <p id="computer-score">Computer:0</p>
+          <p id="computer-score">Computer: 0</p>
         </div>
       </div>
 
       <div class="buttons">
-        <button id="rock">✊</button>
-        <button id="paper">✋</button>
-        <button id="scissors">✌</button>
+        <button id="Rock">✊</button>
+        <button id="Paper">✋</button>
+        <button id="Scissors">✌</button>
       </div>
     </div>
     <script src="script.js"></script>
