--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
-    <header class="header"><h1>Rock Paper Scissors</h1></header>
+    <header class="header"><h1 class="title">Rock Paper Scissors</h1></header>
 
     <div class="container">
       <div class="results">
