--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Bungee+Inline|Lilita+One"
+      href="https://fonts.googleapis.com/css?family=Bungee+Inline|Calistoga"
       rel="stylesheet"
     />
     <title>Rock-Paper-Scissors</title>
@@ -15,18 +15,20 @@
     <header class="header"><h1 class="title">Rock Paper Scissors</h1></header>
 
     <div class="container">
-      <div class="results">
-        <p id="first-text">Press a button to choose</p>
-        <p id="second-text">First to 5 points wins the game</p>
-      </div>
-      <div class="score">
-        <div class="show-score">
-          <p class="sings" id="player-selection">?</p>
-          <p id="player-score">Player: 0</p>
+      <div class="scoreboard">
+        <div class="results">
+          <p id="first-text">Press a button to choose</p>
+          <p id="second-text">First to 5 points wins the game</p>
         </div>
-        <div class="show-score">
-          <p class="sings" id="computer-selection">?</p>
-          <p id="computer-score">Computer: 0</p>
+        <div class="score">
+          <div class="show-score">
+            <p class="sings" id="player-selection">?</p>
+            <p class="scores" id="player-score">Player: 0</p>
+          </div>
+          <div class="show-score">
+            <p class="sings" id="computer-selection">?</p>
+            <p class="scores" id="computer-score">Computer: 0</p>
+          </div>
         </div>
       </div>
 
